--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.8"
 
 services:
   keycloak:
-    #image: quay.io/keycloak/keycloak:23.0
     build: .
     ports:
       - "8080:8080"
@@ -10,33 +9,17 @@ services:
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
-      KC_HOSTNAME: keycloak
       KC_HOSTNAME_PORT: "8080"
       KC_PROXY: edge
       KC_HTTP_ENABLED: "true"
-      KC_HEALTH_ENABLED: "true"
-      KC_METRICS_ENABLED: "true"
-      KC_DB: mariadb
-      KC_DB_URL: jdbc:mariadb://mariadb:3306/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: password
       DEBUG_PORT: "*:8787"
+    command:
+      - "start-dev"
+      - "--debug"
     volumes:
-      - ./keycloak/conf:/opt/keycloak/conf
-    command: ["start-dev", "--debug"]
+      - ./keycloak/conf/quarkus.properties:/opt/keycloak/conf/quarkus.properties:ro
     depends_on:
-      - mariadb
       - userli
-
-  mariadb:
-    image: mariadb:10.3
-    environment:
-      MYSQL_USER: keycloak
-      MYSQL_PASSWORD: password
-      MYSQL_DATABASE: keycloak
-      MARIADB_RANDOM_ROOT_PASSWORD: true
-    volumes:
-      - keycloak:/var/lib/mysql
 
   userli:
     image: mariadb:10.3
@@ -49,36 +32,9 @@ services:
       - ./mariadb/dump.sql:/docker-entrypoint-initdb.d/dump.sql
       - userli:/var/lib/mysql
 
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - "3000:3000"
-    depends_on:
-      - keycloak
-    environment:
-      GF_SERVER_PROTOCOL: http
-      GF_SERVER_DOMAIN: grafana
-      GF_SERVER_ROOT_URL: http://grafana:3000
-      GF_AUTH_DISABLE_LOGIN_FORM: true
-      GF_AUTH_GENERIC_OAUTH_ENABLED: true
-      GF_AUTH_GENERIC_OAUTH_NAME: Keycloak
-      GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: true
-      GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana-oauth
-      GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: nxcVDr6DvxzTdKrT8Omuiztmp8CbWGel
-      GF_AUTH_GENERIC_OAUTH_SCOPES: openid email profile offline_access roles
-      GF_AUTH_GENERIC_OAUTH_EMAIL_ATTRIBUTE_PATH: email
-      GF_AUTH_GENERIC_OAUTH_LOGIN_ATTRIBUTE_PATH: email
-      GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: username
-      GF_AUTH_GENERIC_OAUTH_AUTH_URL: http://keycloak:8080/realms/master/protocol/openid-connect/auth
-      GF_AUTH_GENERIC_OAUTH_TOKEN_URL: http://keycloak:8080/realms/master/protocol/openid-connect/token
-      GF_AUTH_GENERIC_OAUTH_API_URL: http://keycloak:8080/realms/master/protocol/openid-connect/userinfo
-      GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: (contains(email, 'admin@example.org') || contains(email, 'user@example.org')) && 'Admin' || 'Viewer'
-      GF_AUTH_GENERIC_OAUTH_TLS_SKIP_VERIFY_INSECURE: true
-
 networks:
   default:
     name: keycloak
 
 volumes:
   userli:
-  keycloak:
