--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   keycloak:
     build: .
@@ -20,6 +18,30 @@ services:
       - ./keycloak/keywind.jar:/opt/keycloak/providers/keywind.jar
       - ./keycloak/systemli.jar:/opt/keycloak/providers/systemli.jar
 
+  userli:
+    image: docker.io/systemli/userli:latest
+    ports:
+      - 8000:80
+    environment:
+      KEYCLOAK_API_ENABLED: true
+      KEYCLOAK_API_IP_ALLOWLIST: "0.0.0.0/0, ::/0"
+      KEYCLOAK_API_ACCESS_TOKEN: "keycloak"
+
+  mariadb:
+    image: docker.io/mariadb:10.11
+    environment:
+      MYSQL_USER: mail
+      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: mail
+      MARIADB_RANDOM_ROOT_PASSWORD: 1
+    ports:
+      - 3306:3306
+    volumes:
+      - mariadb:/var/lib/mysql
+
 networks:
   default:
     name: keycloak
+
+volumes:
+  mariadb:
